# fast-api-converter

./: README.md  pyproject.toml
src/domain/: model.py
test/: test_models.py
