[tool.poetry]
name = "flask-converter"
version = "0.1.0"
description = "Simple Flask Api"
authors = ["Zaman Yusifov <“zamanyusifov2002@gmail.com”>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
